infra/k8s/mongo-service-external.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-external
  annotations:
    # For cloud providers that support LoadBalancer
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
  # Uncomment the following for specific IP allocation
  # loadBalancerIP: YOUR_EXTERNAL_IP
